WIP: tdf#105735

addition to commit fce604c8ae11b462113305aba080d77f8193cfea
    [API CHANGE] return unsigned 64-bit value from GetSystemTicks in basic code
    instead of 32-bit value.

Change-Id: I25b0c9191f128d1a07ec785318cde7b5671f09a9